# DKLs23-BBMTLib

./: CLI_BUILD.md  CLI_USAGE.md  Cargo.toml  generate_keyshares.sh  generate_parties.sh  party_1_keyshare.json  party_2_keyshare.json  party_3_keyshare.json  test_http_dkg.sh
examples/: README.md  README_NOSTR.md  basic_usage.rs  cli_usage.rs  distributed_dkg.rs  http_dkg_test.rs  network_demo.rs  nostr_dkg_test.rs  nostr_easiest.rs  nostr_multi_party.rs  nostr_practical.rs  nostr_real.rs  nostr_simple.rs  nostr_working.rs  simple_demo.rs  very_basic_example.rs
keyshares/: npub1yewsl7caqztnts7.json
src/: facade.rs  lib.rs  nostr_comm.rs  protocols.rs
src/protocols/: derivation.rs  dkg.rs  dkg_distributed.rs  re_key.rs  refresh.rs
src/utilities/: rng.rs
