[package]
name = "dkls23"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA in Three Rounds"
repository = "https://github.com/0xCarbon/DKLs23"
readme = "README.md"

[dependencies]
k256 = { version = "0.13", features = ["serde"] }
bitcoin_hashes = "0.16"
sha3 = "0.10"
rand = "0.8"
getrandom = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
ripemd = "0.1"
bs58 = "0.5"
bech32 = "0.9"
rayon = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[features]
insecure-rng = []
